// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSwatch should match the snapshot when a color is locked 1`] = `
<div
  className="ColorSwatch--div"
>
  <div
    className="ColorSwatch--div--color"
    style={
      Object {
        "backgroundColor": "#FCB97D",
      }
    }
  />
  <div
    className="ColorSwatch--div--name"
  >
    <i
      className="fas fa-lock"
      onClick={[Function]}
    />
    <p>
      #FCB97D
    </p>
  </div>
</div>
`;

exports[`ColorSwatch should match the snapshot when a color is unlocked 1`] = `
<div
  className="ColorSwatch--div"
>
  <div
    className="ColorSwatch--div--color"
    style={
      Object {
        "backgroundColor": "#FCB97D",
      }
    }
  />
  <div
    className="ColorSwatch--div--name"
  >
    <i
      className="fas fa-unlock"
      onClick={[Function]}
    />
    <p>
      #FCB97D
    </p>
  </div>
</div>
`;
